[project]
name = "elevenlabs-agents"
version = "0.1.0"
description = "ElevenLabs voice synthesis and MCP integration for MIA IoT control system"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "MIA Project" }]
keywords = ["mcp", "elevenlabs", "voice", "tts", "iot", "mia"]
license = { text = "MIT" }
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
    "Topic :: Home Automation",
]
dependencies = [
    "httpx>=0.25.0",
    "pydantic>=2.0.0",
    "mcp>=1.0.0",
    "websockets>=12.0",
    "asyncio-mqtt>=0.16.1",
]

[project.scripts]
elevenlabs-mcp-server = "src:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"